@@ -1,0 +1,15 @@
+FCN_FILE_DIRS += %reldir%
+
+%canon_reldir%_FCN_FILES = \
+  %reldir%/base64decode.m \
+  %reldir%/base64encode.m
+
+%canon_reldir%dir = $(fcnfiledir)/+matlab/+net
+
+%canon_reldir%_DATA = $(%canon_reldir%_FCN_FILES)
+
+FCN_FILES += $(%canon_reldir%_FCN_FILES)
+
+PKG_ADD_FILES += %reldir%/PKG_ADD
+
+DIRSTAMP_FILES += %reldir%/$(octave_dirstamp)
